--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <div class="main">
         <div class="card">
             <div class="card-body">
+                <button onclick="reloadBtn()" class="btn btn-primary">Reload</button>
                 <form>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name</label>
@@ -44,6 +45,12 @@
             </div>
           </div>
     </div>
+    <script>
+        function reloadBtn(){
+            return  location.reload()
+        }
+       
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js" integrity="sha512-puJW3E/qXDqYp9IfhAI54BJEaWIfloJ7JWs7OeD5i6ruC9JZL1gERT1wjtwXFlh7CjE7ZJ+/vcRZRkIYIb6p4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
